--- a/products.html
+++ b/products.html
@@ -16,12 +16,14 @@
       <ul id="nav-bar">
         <li> 
           <form action="#" method="get">
-            <select id="taxon" name="taxon"><option value="">All departments</option>
+            <select id="taxon" name="taxon">
+              <option value="">All departments</option>
               <option value="1000">Categories</option>
-              <option value="20000">Brands</option></select>
-              <input id="keywords" name="keywords" type="text" />
-              <input type="submit" value="Search" />
-            </form>
+              <option value="20000">Brands</option>
+            </select>
+            <input id="keywords" name="keywords" type="text" />
+            <input type="submit" value="Search" />
+          </form>
         </li>
         <li><a href="#">My Account</a></li>
         <li><a href="#">Logout</a></li>
