--- a/products.html
+++ b/products.html
@@ -28,7 +28,7 @@
         <li><a href="#">My Account</a></li>
         <li><a href="#">Logout</a></li>
         <li><a href="#">Home</a></li>
-        <li class="cart-indicator"><a href="#">Cart</a></li>
+        <li class="cart-indicator"><a href="#" class="full">Cart: (2) $35.98</a></li>
       </ul>
     </div>
 	  <a href="/"><img alt="Spree_50" src="images/admin/bg/spree_50.png" /></a>
