--- a/cart.html
+++ b/cart.html
@@ -93,7 +93,7 @@
                 $15.99
               </td>
               <td>
-                <a href="/orders/R863120028/line_items/1070870201" onclick="var f = document.createElement('form'); f.style.display = 'none'; this.parentNode.appendChild(f); f.method = 'POST'; f.action = this.href;var m = document.createElement('input'); m.setAttribute('type', 'hidden'); m.setAttribute('name', '_method'); m.setAttribute('value', 'delete'); f.appendChild(m);var s = document.createElement('input'); s.setAttribute('type', 'hidden'); s.setAttribute('name', 'authenticity_token'); s.setAttribute('value', 'ua1kxfmvHYfPeBCTwzOsuZnjXlQqqvFhgJgn9FZDmXc='); f.appendChild(s);f.submit();return false;"><img alt="Delete" src="images/admin/icons/delete.png?1272921809" /></a>
+                <a href="#" onclick="var f = document.createElement('form'); f.style.display = 'none'; this.parentNode.appendChild(f); f.method = 'POST'; f.action = this.href;var m = document.createElement('input'); m.setAttribute('type', 'hidden'); m.setAttribute('name', '_method'); m.setAttribute('value', 'delete'); f.appendChild(m);var s = document.createElement('input'); s.setAttribute('type', 'hidden'); s.setAttribute('name', 'authenticity_token'); s.setAttribute('value', 'ua1kxfmvHYfPeBCTwzOsuZnjXlQqqvFhgJgn9FZDmXc='); f.appendChild(s);f.submit();return false;"><img alt="Delete" src="images/admin/icons/delete.png?1272921809" /></a>
               </td>
             </tr>
           </tbody>
