html5 doctype and cross links

--- a/checkout_complete.html
+++ b/checkout_complete.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
@@ -24,10 +24,10 @@
             <input type="submit" value="Search" />
           </form>
         </li>
-        <li><a href="#">My Account</a></li>
-        <li><a href="#">Logout</a></li>
-        <li><a href="#">Home</a></li>
-        <li class="cart-indicator"><a href="#">Cart</a></li>
+        <li><a href="account.html">My Account</a></li>
+        <li><a href="login.html">Logout</a></li>
+        <li><a href="products.html">Home</a></li>
+        <li class="cart-indicator"><a href="cart.html">Cart</a></li>
       </ul>
     </div>
 	  <a href="#"><img alt="Spree_50" src="images/admin/bg/spree_50.png" /></a>
