--- a/faq.html
+++ b/faq.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
@@ -41,9 +41,9 @@
             <input type="submit" value="Search" />
           </form>
         </li>
-        <li><a href="#">My Account</a></li>
-        <li><a href="#">Logout</a></li>
-        <li><a href="#">Home</a></li>
+        <li><a href="account.html">My Account</a></li>
+        <li><a href="login.html">Logout</a></li>
+        <li><a href="products.html">Home</a></li>
         <li class="cart-indicator"><a href="#" class="full">Cart: (2) $35.98</a></li>
       </ul>
     </div>
