--- a/products.html
+++ b/products.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
@@ -25,10 +25,10 @@
             <input type="submit" value="Search" />
           </form>
         </li>
-        <li><a href="#">My Account</a></li>
-        <li><a href="#">Logout</a></li>
-        <li><a href="#">Home</a></li>
-        <li class="cart-indicator"><a href="#" class="full">Cart: (2) $35.98</a></li>
+        <li><a href="account.html">My Account</a></li>
+        <li><a href="login.html">Logout</a></li>
+        <li><a href="products.html">Home</a></li>
+        <li class="cart-indicator"><a href="cart.html" class="full">Cart: (2) $35.98</a></li>
       </ul>
     </div>
 	  <a href="/"><img alt="Spree_50" src="images/admin/bg/spree_50.png" /></a>
@@ -91,8 +91,8 @@
         </li>
   
         <li id="product_1025786064">
-          <a href="#"><img alt="Ror_baseball" src="assets/products/4/small/ror_baseball.jpeg?1272922031" /></a>
-          <a href="#" class="info">Ruby on Rails Baseball Jersey<span class='price selling'>$19.99</span></a>
+          <a href="product.html"><img alt="Ror_baseball" src="assets/products/4/small/ror_baseball.jpeg?1272922031" /></a>
+          <a href="product.html" class="info">Ruby on Rails Baseball Jersey<span class='price selling'>$19.99</span></a>
         </li>
   
         <li id="product_1035865702">
