--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
@@ -25,8 +25,8 @@
           </form>
         </li>
         <li><a href="#">Log In</a></li>
-        <li><a href="#">Home</a></li>
-        <li class="cart-indicator"><a href="#">Cart</a></li>
+        <li><a href="products.html">Home</a></li>
+        <li class="cart-indicator"><a href="cart.html">Cart</a></li>
       </ul>
     </div>
 	  <a href="#"><img alt="Spree_50" src="images/admin/bg/spree_50.png" /></a>
