--- a/checkout1.html
+++ b/checkout1.html
@@ -3,9 +3,9 @@
 <head>
 
   <title>Spree Demo Site - Checkout</title>
-  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-  <link href="stylesheets/screen.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="stylesheets/site.css" media="screen" rel="stylesheet" type="text/css" />
+  <meta charset="UTF-8" />
+  <link href="stylesheets/screen.css" rel="stylesheet" />
+  <link href="stylesheets/site.css" rel="stylesheet" />
   
 </head>
 
