--- a/checkout1.html
+++ b/checkout1.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" dir="ltr" class="no-js">
 <head>
 
-  <title>Spree Demo Site - Checkout</title>
+  <title>Spree Demo Site - Address</title>
   <meta charset="UTF-8" />
   <link href="stylesheets/screen.css" rel="stylesheet" />
   <link href="stylesheets/site.css" rel="stylesheet" />
+  <script src="javascripts/modernizr-1.5.min.js"></script>
   
 </head>
 
@@ -74,7 +75,7 @@
           <div id="coupon-error"></div>
         </div>
   
-        <form action="#" class="edit_checkout" id="checkout_form_address" method="post">
+        <form action="checkout2.html" class="edit_checkout" id="checkout_form_address" method="get">
           <fieldset id="billing">
             <legend>Billing Address</legend>
             <div class="inner">
