--- a/checkout_complete.html
+++ b/checkout_complete.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" dir="ltr" class="no-js">
 <head>
 
-  <title>Spree Demo Site - Checkout</title>
+  <title>Spree Demo Site - Summary</title>
   <meta charset="UTF-8" />
   <link href="stylesheets/screen.css" rel="stylesheet" />
   <link href="stylesheets/site.css" rel="stylesheet" />
+  <script src="javascripts/modernizr-1.5.min.js"></script>
   
 </head>
 
@@ -40,7 +41,7 @@
       <div class="flash notice">Your order has been processed successfully</div>
       
       <div id="order">
-        <a href="#">Go Back To Store</a>
+        <a href="products.html">Go Back To Store</a>
         <br/><br/>
         <h3>Thank you for your business.  Please print out a copy of this confirmation page for your records.</h3>
         <br/><br/>
@@ -87,7 +88,7 @@
           </tbody>
         </table>
         <br/>
-        <a href="#">Go Back To Store</a>
+        <a href="products.html">Go Back To Store</a>
       </div>
     </div>
     
