--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" dir="ltr" class="no-js">
 <head>
 
-  <title>Spree Demo Site</title>
+  <title>Spree Demo Site - Contact</title>
   <meta charset="UTF-8" />
   <link href="stylesheets/screen.css" rel="stylesheet" />
   <link href="stylesheets/site.css" rel="stylesheet" />
+  <script src="javascripts/modernizr-1.5.min.js"></script>
   
 </head>
 
