--- a/wordsmith.html
+++ b/wordsmith.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" dir="ltr" class="no-js">
 <head>
 
   <title>Spree Demo Site</title>
   <meta charset="UTF-8" />
   <link href="stylesheets/screen.css" rel="stylesheet" />
   <link href="stylesheets/site.css" rel="stylesheet" />
-  <link href="stylesheets/wordsmith.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/wordsmith.css" rel="stylesheet" />
+  <script src="javascripts/modernizr-1.5.min.js"></script>
   
 </head>
 
