--- a/checkout2.html
+++ b/checkout2.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" dir="ltr" class="no-js">
 <head>
 
-  <title>Spree Demo Site - Checkout</title>
+  <title>Spree Demo Site - Shipping</title>
   <meta charset="UTF-8" />
   <link href="stylesheets/screen.css" rel="stylesheet" />
   <link href="stylesheets/site.css" rel="stylesheet" />
+  <script src="javascripts/modernizr-1.5.min.js"></script>
   
 </head>
+
 <body class="one-col">
   <div id="header" class="container">                                                          
     <div id="login-bar">          
@@ -78,7 +80,7 @@
           <div id="coupon-error"></div>
         </div>        
   
-        <form action="#" class="edit_checkout" id="checkout_form_delivery" method="post">
+        <form action="checkout3.html" class="edit_checkout" id="checkout_form_delivery" method="get">
           <fieldset id='shipping_method'>
             <legend>Shipping Method</legend>
             <div class="inner">
