--- a/checkout4.html
+++ b/checkout4.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" dir="ltr" class="no-js">
 <head>
 
-  <title>Spree Demo Site - Checkout</title>
+  <title>Spree Demo Site - Confirm</title>
   <meta charset="UTF-8" />
   <link href="stylesheets/screen.css" rel="stylesheet" />
   <link href="stylesheets/site.css" rel="stylesheet" />
+  <script src="javascripts/modernizr-1.5.min.js"></script>
   
 </head>
+
 <body class="one-col">
   <div id="header" class="container">                                                          
     <div id="login-bar">          
@@ -82,7 +84,7 @@
           <div id="coupon-error"></div>
         </div>        
   
-        <form action="#" class="edit_checkout" id="checkout_form_confirm" method="post">
+        <form action="checkout_complete.html" class="edit_checkout" id="checkout_form_confirm" method="get">
           <fieldset id="order_details">
             <div class="clear"></div>
             <legend>Confirm</legend>
