--- a/faq.html
+++ b/faq.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" dir="ltr" class="no-js">
 <head>
 
   <title>Frequently Asked Questions</title>
   <meta charset="UTF-8" />
   <link href="stylesheets/screen.css" rel="stylesheet" />
   <link href="stylesheets/site.css" rel="stylesheet" />
-  <script src="javascripts/jquery-1.3.2.min.js" type="text/javascript"></script>
+  <script src="javascripts/modernizr-1.5.min.js"></script>
+  <script src="javascripts/jquery-1.3.2.min.js"></script>
   
   
-  <script type="text/javascript">
+  <script>
   //<![CDATA[
 
       $(document).ready(function() {
@@ -22,6 +23,17 @@
 
   //]]>
   </script>
+  
+</head>
+<!DOCTYPE html>
+<html lang="en" dir="ltr" class="no-js">
+<head>
+
+  <title>Spree Demo Site</title>
+  <meta charset="UTF-8" />
+  <link href="stylesheets/screen.css" rel="stylesheet" />
+  <link href="stylesheets/site.css" rel="stylesheet" />
+  <script src="javascripts/modernizr-1.5.min.js"></script>
   
 </head>
 
